fixed some margins on mobile design

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@
   font-size: 50px;
 }
 .home{
-  height: 560px;
+  height: 520px;
 }
 .landing-text{
   margin-top: 30%;
